src/objects/User_Flow_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <formula>Case__r.ClosedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Open_Date__c</fullName>
        <formula>Case__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>Text(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>User Flow Tracking</relationshipLabel>
        <relationshipName>User_Flow_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flow_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Path__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Flow_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Flow Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Flow_Name__c</columns>
        <columns>Flow_Path__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_User_Flow_Tracking_Records</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Flow_Name__c</columns>
        <columns>Flow_Path__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
        </filters>
        <label>All User Flow Tracking Records</label>
    </listViews>
    <listViews>
        <fullName>Retail_Call_Center_Visual_Flow</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Flow_Name__c</columns>
        <columns>Flow_Path__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Flow_Name__c</field>
            <operation>contains</operation>
            <value>Retail Service</value>
        </filters>
        <label>Retail Call Center Visual Flow</label>
    </listViews>
    <listViews>
        <fullName>Retail_Call_Center_Visual_Flow1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>User__c</columns>
        <columns>Flow_Name__c</columns>
        <columns>Flow_Path__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OBJECT_ID</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Flow_Name__c</field>
            <operation>contains</operation>
            <value>IP Offer</value>
        </filters>
        <label>IP Opportunity Flow</label>
    </listViews>
    <nameField>
        <displayFormat>FT-{000000}</displayFormat>
        <label>User Flow Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Flow Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>